--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <div>(2014.07.16 ~ Now) Researcher</div>
 <div><a href="http://dcrc.konkuk.ac.kr/" target="_blank" rel="noopener">VR Lab</a>, Dept. of Software, Konkuk University, Korea</div><br />
 <h4>Career</h4>
+
+<div>(2023.03.01 ~ 2024.02.29) Lecture Inviting Professor</div>
+<div>Immersive Media Innovation Sharing University, Konkuk University, Korea</div><br />
 <div>(2019.09.01 ~ 2022.08.31) Lecturer</div>
 <div>College of Liberal Arts, Konkuk University, Korea</div><br />
 <div>(2012.04.01 ~ 2013.03.31) Associate Professor</div>
@@ -81,8 +84,8 @@
 								<span class="image main"><img src="images/activities.jpg" alt="" /></span>
 
 <ul>
-<li>2016 ~ now<br />NIPA (National IT Industry Promotion Agency) - Evaluation Committee</li>
-<li>2016 ~ now<br />IITP (Institude for Information & communications Technology Promotion) - Evaluation Committee</li>
+<li>2016 ~ Now<br />NIPA (National IT Industry Promotion Agency) - Evaluation Committee</li>
+<li>2016 ~ Now<br />IITP (Institude for Information & communications Technology Promotion) - Evaluation Committee</li>
 <li>2020<br />HCI KOREA 2020 - Program Committee</li>
 <li>2018<br />HCI KOREA 2018 - Program Committee</li>
 <li>2017<br />VSMM2017 International Conference - Technical Program Committee<br />HCI KOREA 2017 - Program Committee</li>
@@ -119,14 +122,19 @@
 <td>Period</td>
 </tr>
 <tr>
+<td>Digital Humanities-Based Agro-Healing Convergence Research Center<br />(디지털인문기반 치유농업 융합연구센터)</td>
+<td>Korea Ministry of Science and ICT</td>
+<td>2023/06 ~ Now</td>
+</tr>
+<tr>
 <td>Cognitive-friendly interaction design to enhance human presence in virtual reality<br />(가상현실 속 인간의 현존감 제고를 위한 인지 친화적 인터랙션 디자인)</td>
 <td>Korea Ministry of Science and ICT</td>
-<td>2022/09 ~ </td>
+<td>2022/09 ~ 2023/08</td>
 </tr>
 <tr>
 <td>Objective Analysis of Facial Bone CT Images Using Curvature Measurement<br />(안면골 골절 컴퓨터 단층촬영 영상에서 곡면의 곡률 계측을 통한 객관적 분석)</td>
 <td>Konkuk University</td>
-<td>2022/08 ~ </td>
+<td>2022/08 ~ Now</td>
 </tr>
 <tr>
 <td>3D Interactive Human Body Model Visualization for Multi-Component Multi-Target Effect Analysis<br />(MCMT 효능해석을 위한 3차원 대화형 인체모델 시각화 기술)</td>
