--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div>1019, New Engineering Bldg., Konkuk University</div>
 <div>120, Neungdong-ro, Gwangjin-gu, Seoul, 05029, Korea</div>
 <div>+82-2-455-4515</div>
-<div>hasupsⓐmail.com</div>
+<div>hasupsⓐgmail.com</div>
 
 							</article>
 
