--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
 <h4><strong>Book</strong></h4>
 </div>
 <ol>
+<li>Chanjong Park, <strong>Hasup Lee</strong> and HyungSeok Kim, "Metaverse and the Change of Life Style (메타버스와 라이프 스타일의 변화)", KAIST, 2023. (ISBN 979-11-92990-16-3)</li>
 <li><strong>Hasup Lee</strong>, "Alt+X Series CGI Programing (Alt-X 시리즈 CGI 프로그래밍)", SeongAnDang, 1996. (ISBN 89-315-4400-6)</li>
 </ol>
 <div>
