--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div>Immersive Media Innovation Sharing University, Konkuk University, Korea</div><br />
 <div>(2019.09.01 ~ 2022.08.31) Lecturer</div>
 <div>College of Liberal Arts, Konkuk University, Korea</div><br />
-<div>(2012.04.01 ~ 2013.03.31) Associate Professor</div>
+<div>(2012.04.01 ~ 2013.03.31) Senior Assistant Professor</div>
 <div>(2009.01.01 ~ 2012.03.31) Assistant Professor</div>
 <div><a href="http://lab.sdm.keio.ac.jp/ogi/" target="_blank" rel="noopener">Visual Simulation Lab</a>, Grad. School of SDM, Keio University, Japan</div><br />
 <div>(1997.04.30 ~ 2004.01.31) Technical Research Personnel</div>
@@ -71,10 +71,9 @@
 <div>(1990.03 ~ 1995.02) B.S.</div>
 <div>Dept. of CS, KAIST</div><br />
 <h4>Contact</h4>
-<div>1019, New Engineering Bldg., Konkuk University</div>
+<div>Address: 1019, New Engineering Bldg., Konkuk University</div>
 <div>120, Neungdong-ro, Gwangjin-gu, Seoul, 05029, Korea</div>
-<div>+82-2-455-4515</div>
-<div>hasupsⓐgmail.com</div>
+<div>Email: hasupsⓐgmail.com</div>
 
 							</article>
 
@@ -86,6 +85,7 @@
 <ul>
 <li>2016 ~ Now<br />NIPA (National IT Industry Promotion Agency) - Evaluation Committee</li>
 <li>2016 ~ Now<br />IITP (Institude for Information & communications Technology Promotion) - Evaluation Committee</li>
+<li>2024<br />HCI KOREA 2024 - Program Committee</li>
 <li>2020<br />HCI KOREA 2020 - Program Committee</li>
 <li>2018<br />HCI KOREA 2018 - Program Committee</li>
 <li>2017<br />VSMM2017 International Conference - Technical Program Committee<br />HCI KOREA 2017 - Program Committee</li>
