--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
 
 <div><img src="images/hasups.jpg" alt="" /></div><br />
 <h4>Hasup LEE, Ph.D.</h4>
-<div>(2014.07.16 ~ Now) Researcher</div>
-<div><a href="http://dcrc.konkuk.ac.kr/" target="_blank" rel="noopener">VR Lab</a>, Dept. of Software, Konkuk University, Korea</div><br />
+<div>(2024.04.01 ~ Now) Assistant Professor</div>
+<div>Engineering Education Research Center, Konkuk University, Korea</div><br />
 <h4>Career</h4>
-
-<div>(2023.03.01 ~ 2025.02.28) Lecture Inviting Professor</div>
+<div>(2014.07.16 ~ 2024.03.31) Researcher</div>
+<div><a href="http://dcrc.konkuk.ac.kr/" target="_blank" rel="noopener">VR Lab</a>, Dept. of Software, Konkuk University, Korea</div><br />
+<div>(2023.03.01 ~ 2024.03.31) Lecture Inviting Professor</div>
 <div>Immersive Media Innovation Sharing University, Konkuk University, Korea</div><br />
 <div>(2019.09.01 ~ 2022.08.31) Lecturer</div>
 <div>College of Liberal Arts, Konkuk University, Korea</div><br />
